syntax = "proto3";

option csharp_namespace = "YouRatta.Common.Proto";

package conflict_monitor_message;

message InstalledClientSecrets
{
    string authorized_user = 1 [ json_name = "authorized_user" ];
    string service_account = 2 [ json_name = "service_account" ];
    string external_account = 3 [ json_name = "external_account" ];
    string type = 4 [ json_name = "type" ];
    string project_id = 5 [ json_name = "project_id" ];
    string quota_project_id = 6 [ json_name = "quota_project_id" ];
    string client_id = 7 [ json_name = "client_id" ];
    string client_secret = 8 [ json_name = "client_secret" ];
    string client_email = 9 [ json_name = "client_email" ];
    string private_key = 10 [ json_name = "private_key" ];
    string private_key_id = 11 [ json_name = "private_key_id" ];
    string refresh_token = 12 [ json_name = "refresh_token" ];
    string audience = 13 [ json_name = "audience" ];
    string subject_token_type = 14 [ json_name = "subject_token_type" ];
    string token_url = 15 [ json_name = "token_url" ];
    string service_account_impersonation_url = 16 [ json_name = "service_account_impersonation_url" ];
    string workforce_pool_user_project = 17 [ json_name = "workforce_pool_user_project" ];
}
